# dolphin

./: .gitignore  README.md
cmake_modules/: CompilerConfig.cmake
dolphin/common/: common_base.h  common_calc.h  dpaccum.h  import_lmat.h  metrics.h  properties.h
dolphin/vq/: kmeans.h
dolphin/vq/internal/: kmeans_impl.h
matlab/+dolphin/: add_diag.m  dd_entropy.cpp  dd_entropy.m  dpmax.m  dpmaxv.m  dpmin.m  dpminv.m  dpsum.m  dpsumv.m  intcount.cpp  intcount.m  ktop.cpp  ktop.m  logsumexp.cpp  logsumexp.m  nrmexp.cpp  nrmexp.m  pd_logdet.cpp  pd_logdet.m  rand_base.h  rand_exp.cpp  rand_exp.m  rand_gamma.cpp  rand_gamma.m  rand_normal.cpp  rand_normal.m  rand_pick.cpp  rand_pick.m  rand_prng.cpp  rand_prng.m  rand_unif.cpp  rand_unif.m  randi_unif.cpp  randi_unif.m  repnum.cpp  repnum.m  symeig.cpp  symeig.m
matlab/+dolphin/+metrics/: cosdist.cpp  cosdist.m  cosdist_pw.cpp  cosdist_pw.m  dist_base.h  euclidean.cpp  hamdist.cpp  hamdist.m  hamdist_pw.cpp  hamdist_pw.m  ldist.cpp  ldist.m  ldist_pw.cpp  ldist_pw.m  sqeuc.cpp  sqeuc.m  sqeuc_pw.cpp  sqeuc_pw.m
matlab/+dolphin/+setup/: build_all.m  build_list.txt  build_mex.m  load_build_list.m
matlab/+dolphin/private/: dpaccum.cpp  dpaccumv.cpp
tests/: CMakeLists.txt  test_base.h  test_main.cpp
tests/common/: test_common_calc.cpp  test_dpaccum.cpp  test_metrics.cpp
